# r-server

./: .gitignore  Cargo.toml  README.md
examples/: main.rs
examples/docker/: Dockerfile  compose.yml
examples/rest/: main.rs
src/: lib.rs
src/logger/: logger.rs  mod.rs  tests.rs
src/request/: mod.rs  request.rs  tests.rs
src/response/: builder.rs  content_type.rs  mod.rs  response.rs  status.rs  test.rs  tests.rs
src/router/: method.rs  mod.rs  router.rs  tests.rs
src/server/: mod.rs  server.rs  tests.rs
src/sslserver/: mod.rs  sslserver.rs  tests.rs
src/utils/: mod.rs  tests.rs
